<resources>
    <string name="app_name">Roomtips</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="furn_desc">Description</string>
    <string name="furn_price">Price</string>
    <string name="furn_name">Name</string>
    <string name="furn_img">Image</string>
    <string name="speech_prompt">How can I assist you?</string>
    <string name="blur_image">Blurred Image</string>
    <string name="app_title">roomtips</string>
    <string name="view_tutorial_prompt">take a quick tutorial</string>
    <string name="skip_tutorial_prompt">skip</string>
    <string name="tutorial_opening">roomtips tutorial</string>
    <string name="tutorial_next">next</string>
    <string name="talkToVisual">talk</string>
    <string name="visualListening">stop</string>
</resources>
