<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/furn_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/furn_name"
        android:textAlignment="center"
        android:gravity="bottom"
        android:textColor="@color/colorAccent"
        android:textSize="36sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75">

        <ImageView
            android:id="@+id/furn_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/furn_img"
            android:scaleType="center"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>

    <TextView
        android:id="@+id/furn_price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/furn_price"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp" />

</LinearLayout>
